--- a/htaccess.sample
+++ b/htaccess.sample
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteRule ^.*u/(.*)$ /ephemerurl/index.php/u/$1 [L]
+RewriteRule ^.*u/(.*)$ /ephemerurl/index.php [L]
 RewriteRule ^.*until(.*)$ /ephemerurl/index.php [L]
